<package format="2">
  <name>thumper-agv</name>
  <version>0.0.1</version>

  <description>

  	This package is for my Thumper AGV platform.

  </description>

  <maintainer email="ggamble0322@gmail.com">Gene Gamble</maintainer>

  <license>Apache 2.0</license>

  <author>Gene Gamble</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <doc_depend>doxygen</doc_depend>
</package>
